// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration test users create user mutation returns errors 1`] = `
Object {
  "data": Object {
    "createUser": Object {
      "errors": Array [
        Object {
          "name": "UserInputError",
        },
        Object {
          "name": "UserInputError",
        },
        Object {
          "name": "UserInputError",
        },
        Object {
          "name": "General Error",
        },
      ],
      "response": null,
    },
  },
}
`;

exports[`Integration test users create user mutation successfull 1`] = `
Object {
  "data": Object {
    "createUser": Object {
      "errors": Array [],
      "response": Object {
        "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI1ZmJlZWNiYTJjNThiMzA1ODdhNTRmMzYiLCJpYXQiOjE2MDYzNDc5NjJ9._VxFHfjm4xpXhNRXzSj8qym4coqKkywGiuSBVvhJeJE",
      },
    },
  },
}
`;

exports[`Integration test users invalid login mutation returns errors 1`] = `
Object {
  "data": Object {
    "login": Object {
      "errors": Array [
        Object {
          "name": "UserInputError",
        },
      ],
      "response": null,
    },
  },
}
`;

exports[`Integration test users valid login mutation returns token 1`] = `
Object {
  "data": Object {
    "login": Object {
      "errors": Array [],
      "response": Object {
        "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI1ZmJlZWNiYTJjNThiMzA1ODdhNTRmMzUiLCJpYXQiOjE2MDYzNDc5NjJ9.b83U7K1FueGZUVNIR1YaVXPf1CCa7cyVUtZ3OazN-4o",
      },
    },
  },
}
`;
